--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <h2 id="digital-minute"></h2>
         <h2>&nbsp;:&nbsp;</h2>
         <h2 id="digital-second"></h2>
+        <h2>&nbsp;:&nbsp;</h2>
       </div>
     </section>
     <script src="./main.js"></script>
