--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
         <h2>&nbsp;:&nbsp;</h2>
       </div>
     </section>
-    <script src="./main.js"></script>
+    <script src="/main.js"></script>
   </body>
 </html>
